--- a/GradeCenter.API/GradeCenter.API.csproj
+++ b/GradeCenter.API/GradeCenter.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>aspnet-GradeCenter-15215E71-A681-4614-8422-06D98A0956E4</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'GradeCenter' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.16" />
